--- a/index.html
+++ b/index.html
@@ -134,35 +134,35 @@
             <div class="employees-div">
               <h3 class="employees-main">Игорь Демьяненко</h3>
               <p class="employees-secondary">Product Designer</p>
-              <!-- <ul class="list">
-                <li class="item insta"><a href="/" class=""></a></li>
-                <li class="item twit"><a href="/" class=""></a></li>
-                <li class="item faceb"><a href="/" class=""></a></li>
-                <li class="item in"><a href="/" class=""></a></li>
-              </ul> -->
-              <div class="div2">
-                <a href="/" class="item">
-                  <svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="/" class="item">
-                  <svg class="icon" width="20" height="20">
-                    <use href=""></use>
-                  </svg>
-                </a>
-                <a href="/" class="item">
-                  <svg class="icon" width="20" height="20">
-                    <use href=""></use>
-                  </svg>
-                </a>
-                <a href="/" class="item">
-                  <svg class="icon" width="20" height="20">
-                    <use href=""></use>
-                  </svg>
-                </a>
-              </div>
-            </div>
+              <ul class="list">
+                <li class="item">
+                  <a href="/" class="items" >
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
           </li>
           <li class="fon">
             <img src="./images/2.jpg" width="270" alt="Frontend разработчик" />
