--- a/index.html
+++ b/index.html
@@ -42,12 +42,19 @@
       <!-- auth -->
       <ul class="site-auth list">
         <li class="item">
-          <a href="emailto:info@devstudio.com" class="link item-envel"
-            >info@devstudio.com</a
-          >
+          <a href="emailto:info@devstudio.com" class="link">
+            <svg class="item">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            info@devstudio.com
+          </a>
         </li>
         <li class="item">
-          <a href="tel=+380991111111" class="link item-smartp">+380991111111</a>
+          <a href="tel=+380991111111" class="link">
+            <svg class="item">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            +380991111111</a>
         </li>
       </ul>
     </div>
@@ -170,10 +177,33 @@
               <h3 class="employees-main">Ольга Репина</h3>
               <p class="employees-secondary">Frontend Developer</p>
               <ul class="list">
-                <li class="item insta"><a href="/" class=""></a></li>
-                <li class="item twit"><a href="/" class=""></a></li>
-                <li class="item faceb"><a href="/" class=""></a></li>
-                <li class="item in"><a href="/" class=""></a></li>
+                <li class="item">
+                  <a href="/" class="items" >
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </div>
           </li>
@@ -183,10 +213,33 @@
               <h3 class="employees-main">Николай Тарасов</h3>
               <p class="employees-secondary">Marketing</p>
               <ul class="list">
-                <li class="item insta"><a href="/" class=""></a></li>
-                <li class="item twit"><a href="/" class=""></a></li>
-                <li class="item faceb"><a href="/" class=""></a></li>
-                <li class="item in"><a href="/" class=""></a></li>
+                <li class="item">
+                  <a href="/" class="items" >
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </div>
           </li>
@@ -196,10 +249,33 @@
               <h3 class="employees-main">Михаил Ермаков</h3>
               <p class="employees-secondary">UI Designer</p>
               <ul class="list">
-                <li class="item insta"><a href="/" class=""></a></li>
-                <li class="item twit"><a href="/" class=""></a></li>
-                <li class="item faceb"><a href="/" class=""></a></li>
-                <li class="item in"><a href="/" class=""></a></li>
+                <li class="item">
+                  <a href="/" class="items" >
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item">
+                  <a href="/" class="items">
+                    <svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </div>
           </li>
@@ -268,14 +344,35 @@
         </ul>
       </adress>
       <div class="dop-info">
-        <b class="main">ПРИСОЕДИНЯЙТЕСЬ</b>
+        <b class="main">присоединяйтесь</b>
         <ul class="list">
-          <li class="item insta">
-            <a href="/" class=""></a>
+          <li class="item">
+            <a href="/" class="items" >
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li class="item twit"><a href="/" class=""></a></li>
-          <li class="item faceb"><a href="/" class=""></a></li>
-          <li class="item in"><a href="/" class=""></a></li>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
