--- a/index.html
+++ b/index.html
@@ -288,26 +288,46 @@
       <h2 class="head-text">Постоянные клиенты</h2>
       <ul class="list">
         <li class="item">
-          <a>
+          <a class="items">
             <svg class="logo">
               <use href="./images/icon.svg#icon-Logo"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a> </a>
+          <a class="items">
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo1"></use>
+            </svg>
+          </a>
         </li>
         <li class="item">
-          <a> </a>
+          <a class="items">
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo2"></use>
+            </svg>
+          </a>
         </li>
         <li class="item">
-          <a> </a>
+          <a class="items">
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo3"></use>
+            </svg>
+          </a>
         </li>
         <li class="item">
-          <a> </a>
+          <a class="items">
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo4"></use>
+            </svg>
+          </a>
         </li>
         <li class="item">
-          <a> </a>
+          <a class="items">
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo5"></use>
+            </svg>
+          </a>
         </li>
       </ul>
     </section>
