--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,20 @@
       <!-- auth -->
       <ul class="site-auth list">
         <li class="item">
-          <a href="emailto:info@devstudio.com" class="link item-envel"
-            >info@devstudio.com</a
-          >
+          <a href="emailto:info@devstudio.com" class="link">
+            <svg class="items">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
         </li>
         <li class="item">
-          <a href="tel=+380991111111" class="link item-smartp">+380991111111</a>
+          <a href="tel=+380991111111" class="link">
+            <svg class="items">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +380991111111</a
+          >
         </li>
       </ul>
     </div>
@@ -191,12 +199,37 @@
         </ul>
       </adress>
       <div class="dop-info">
-        <b class="main">ПРИСОЕДИНЯЙТЕСЬ</b>
+        <b class="main">присоединяйтесь</b>
         <ul class="list">
-          <li class="item insta"><a href="" class=""></a></li>
-          <li class="item twit"><a href="" class=""></a></li>
-          <li class="item faceb"><a href="" class=""></a></li>
-          <li class="item in"><a href="" class=""></a></li>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="/" class="items">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
