--- a/index.html
+++ b/index.html
@@ -289,42 +289,42 @@
       <ul class="list">
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo1"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo2"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo3"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo4"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a class="items">
-            <svg class="logo">
+            <svg class="logos">
               <use href="./images/icon.svg#icon-Logo5"></use>
             </svg>
           </a>
