--- a/index.html
+++ b/index.html
@@ -288,42 +288,42 @@
       <h2 class="head-text">Постоянные клиенты</h2>
       <ul class="list">
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo1"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo2"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo3"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo4"></use>
             </svg>
           </a>
         </li>
         <li class="item">
-          <a class="items">
+          <a href="/" class="items">
             <svg class="logos">
               <use href="./images/icon.svg#icon-Logo5"></use>
             </svg>
