--- a/index.html
+++ b/index.html
@@ -290,42 +290,42 @@
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo"></use>
+              <use href="./images/icons.svg#icon-Logo"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo1"></use>
+              <use href="./images/icons.svg#icon-Logo1"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo2"></use>
+              <use href="./images/icons.svg#icon-Logo2"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo3"></use>
+              <use href="./images/icons.svg#icon-Logo3"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo4"></use>
+              <use href="./images/icons.svg#icon-Logo4"></use>
             </svg>
           </a>
         </li>
         <li class="item">
           <a href="/" class="items">
             <svg class="logos">
-              <use href="./images/icon.svg#icon-Logo5"></use>
+              <use href="./images/icons.svg#icon-Logo5"></use>
             </svg>
           </a>
         </li>
