--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         </ul>
       </adress>
       <div class="dop-info">
-        <b class="main">присоединяйтесь</b>
+        <b class="main">ПРИСОЕДИНЯЙТЕСЬ</b>
         <ul class="list">
           <li class="item">
             <a href="/" class="items" >
